tests/error/unclosed_string.nx
fun main() = (
    var N = 8;
    print(")
)
