tests/error/unclosed_string.stderr
error: Unclosed string
   --> tests/error/unclosed_string.nx:3:11
  |
3 |     print(")
  |           ^

